<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_peekHeight="@dimen/header_size"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_background"/>

    <ImageView
        android:id="@+id/iv_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/default_margin"
        android:src="@drawable/ic_format_list"/>

    <TextView
        android:id="@+id/tv_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_expand"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_header_subtitle"
        app:layout_constraintVertical_chainStyle="packed"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:textSize="@dimen/list_title_text_size"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorAccent"
        android:text="@string/cars_list_title"/>

    <TextView
        android:id="@+id/tv_header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_expand"
        app:layout_constraintTop_toBottomOf="@id/tv_header_title"
        app:layout_constraintBottom_toBottomOf="@id/iv_expand"
        android:includeFontPadding="false"
        android:textSize="@dimen/list_subtitle_text_size"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorAccent"
        android:text="@string/swipe_up_to_reveal"/>

    <TextView
        android:id="@+id/tv_cars_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_expand"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:textSize="@dimen/list_title_text_size"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorAccent"
        tools:text="15"/>

    <TextView
        android:id="@+id/tv_cars_message"
        android:layout_width="0dp"
        android:layout_height="@dimen/header_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        android:background="@android:color/white"
        android:elevation="@dimen/list_default_margin"
        android:gravity="center_vertical|start"
        android:textSize="@dimen/list_subtitle_text_size"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textColor="@color/warning_color"
        android:text="@string/see_on_map_message"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cars_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cars_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:background="@android:color/white"
        tools:listitem="@layout/car_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>